log
Sun 07 May 2023 11:28:17 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:9: error: unused variable ‘pq’ [-Werror=unused-variable]
   37 |   Heap* pq = (Heap*) malloc(sizeof(Heap));
      |         ^~
heap.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8195711
Sun 07 May 2023 11:29:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d7e7c0d
Sun 07 May 2023 11:29:11 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
21bc5af
Sun 07 May 2023 11:31:30 PM UTC: 
 heap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
3fd22af
Sun 07 May 2023 11:33:26 PM UTC: 
 heap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  1|3
total_score: 10/70
b7ba0de
Sun 07 May 2023 11:36:56 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3bb8e6a
Sun 07 May 2023 11:37:24 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
de9066f
Sun 07 May 2023 11:37:41 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
71ef01d
Sun 07 May 2023 11:38:59 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8a8220e
Mon 08 May 2023 12:03:36 AM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:41:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   41 |   int aux = pq-> size++;
      |       ^~~
heap.c:39:12: error: unused variable ‘nuevoElem’ [-Werror=unused-variable]
   39 |   heapElem nuevoElem = {data, priority};
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7cfd922
Mon 08 May 2023 12:08:14 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:17: error: invalid operands to binary && (have ‘int’ and ‘heapElem’ {aka ‘struct nodo’})
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |         ~~~~~~~ ^~ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             |                   |
      |             int                 heapElem {aka struct nodo}
heap.c:42:46: error: expected ‘;’ before ‘)’ token
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |                                              ^
      |                                              ;
heap.c:42:46: error: expected expression before ‘)’ token
heap.c:42:47: error: expected expression before ‘.’ token
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |                                               ^
heap.c:42:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |   ^~~
heap.c:42:80: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |                                                                                ^~~
heap.c:42:97: error: expected ‘;’ before ‘)’ token
   42 |   for ( aux > 0 && pq->heapArray[(aux-aux)/2]).priority < nuevoElem->priority; aux = (aux-aux)/2)
      |                                                                                                 ^
      |                                                                                                 ;
heap.c:42:97: error: expected statement before ‘)’ token
heap.c:39:12: error: unused variable ‘nuevoElem’ [-Werror=unused-variable]
   39 |   heapElem nuevoElem = {data, priority};
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc57810
